feat: add file extension query func
